<resources>
    <string name="app_name">ReclamosGrupo17</string>

    <string name="hello_world">Hola Mundo!</string>
    <string name="action_settings">Configuracion</string>
    <string name="title_activity_usuario_actualizar">Actualizar Usuario</string>
    <string name="title_activity_usuario_menu">Tabla Usuario</string>
        <string name="puedes_hablar">Puedes hablar ahora....</string>

    <string name="mapa">Mapa</string>
    <string name="title_activity_estado_reclamo_menu">Tabla Estado Reclamo</string>
     <string name="title_activity_estado_reclamo_insertar">Insertar Estado Reclamo</string>
    <string name="title_activity_estado_reclamo_eliminar">Eliminar Estado Reclamo
    </string>
    <string name="title_activity_estado_reclamo_consultar">Consultar Estado Reclamo</string>
    <string name="title_activity_estado_reclamo_actualizar">Actualizar Estado Reclamo</string>

    <string name="title_activity_detalle_reclamo_menu">Tabla Detalle Reclamo</string>
    <string name="title_activity_detalle_reclamo_insertar">Insertar Detalle Reclamo
    </string>
    <string name="title_activity_detalle_reclamo_eliminar">Eliminar Detalle Reclamo
    </string>
    <string name="title_activity_detalle_reclamo_consultar">Consultar Detalle Reclamo</string>
    <string name="title_activity_detalle_reclamo_actualizar">Actualizar Detalle Reclamo</string>

    <string name="title_activity_prod_serv_menu">Tabla Producto Servicio</string>
    <string name="title_activity_categoria_prod_serv_menu">Tabla Categoria Producto Servicio</string>
    <string name="title_activity_categoria_empresa_menu">Tabla Categoria Empresa</string>
    <string name="title_activity_categoria_empresa_insertar_activity">Insertar Categoria Empresa</string>
    <string name="title_activity_categoria_empresa_eliminar">Eliminar Categoria Empresa </string>
    <string name="title_activity_categoria_empresa_consultar">CategoriaEmpresaConsulatarActivity</string>
    <string name="title_activity_categoria_empresa_actualizar">Actualizar Categoria Empresa</string>
    <string name="title_activity_empresa_menu">Tabla Empresa</string>
    <string name="title_activity_reclamo_menu">Tabla Reclamo</string>
    <string name="title_activity_sucursal_menu">Tabla Sucursal</string>
    <string name="title_activity_zona_menu" translatable="false">Tabla Zona</string>
    <string name="fill_db">Llenar BD</string>
    <string name="title_activity_usuario_consultar">Consultar Usuario</string>
    <string name="title_activity_usuario_eliminar">Eliminar Usuario</string>
    <string name="title_activity_usuario_insertar">Insertar Usuario</string>
    <string name="cantidad_productos">Cantidad Prod</string>
    <!-- Resources para Menu principal Tablas-->
    <string name="insertar">Insertar Registro</string>
    <string name="eliminar">Eliminar Registro</string>
    <string name="consultar">Consultar Registro</string>
    <string name="actualizar">Actualizar Registro</string>

    <!-- Resources para Empresa-->
    <string name="empresa_idempresa">ID Empresa</string>
    <string name="empresa_idcategoriaempresa">ID Categoria Empresa</string>
    <string name="empresa_nombreempresa">Nombre Empresa</string>
    <string name="empresa_cantidadsucursales">Cantidad Sucursales</string>


    <!-- Resources para Sucursal-->
    <string name="sucursal_idsucursal">ID Sucursal</string>
    <string name="sucursal_idempresa">ID Empresa</string>
    <string name="sucursal_idzona">ID Zona</string>
    <string name="sucursal_nombresucursal">Nombre Sucursal</string>
    <string name="sucursal_jefesucursal">Jefe Sucursal</string>
    <string name="sucursal_direccionsucursal">Direccion Sucursal</string>
    <string name="sucursal_telefonosucursal">Telefono Sucursal</string>
    <string name="sucursal_consultada">Sucursal Consultada</string>
    <string name="sucursal_noencontrada">Sucursal no encontrada</string>

    <string name="title_activity_sucursal_actualizar">Actualizar Sucursal</string>
    <string name="title_activity_sucursal_eliminar">Eliminar Sucursal</string>
    <string name="title_activity_sucursal_consultar">Consultar Sucursal</string>
    <string name="title_activity_sucursal_insertar">Insertar Sucursal</string>

    <!-- Resources para Usuario -->
    <string name="usuario_idusuario">ID Usuario</string>
    <string name="usuario_nombre">Nombre</string>
    <string name="usuario_apellido">Apellido</string>
    <string name="usuario_dui" translatable="false">DUI</string>
    <string name="usuario_email">Correo Electronico</string>
    <string name="usuario_telefono">Teléfono</string>
    <string name="usuario_edad">Edad</string>
    <string name="usuario_sexo">Sexo</string>
    <string name="usuario_dui_patron" translatable="false">########-#</string>
    <string name="usuario_telefono_patron" translatable="false">####-####</string>
    <string name="usuario_sexo_patron" translatable="false">F o M</string>
    <string name="usuario_consultado">Usuario Consultado</string>
    <string name="usuario_noencontrado">Usuario no encontrado</string>

<string name="guardo_correctamente">Guardo Correctamente</string>

            <!--CategoriaEmpresa-->
    <string name="idcatempresa">ID_Categoria_Empresa</string>
    <string name="nombrecatempresa">Nombre Categoria Empresa</string>
    <string name="descripcion_cempresa">Descripcion Categoria Empresa</string>
    <string name="categoria_empresa_noencontrada">Categoria Empresa no encontrada</string>
    <string name="categoria_empresa_consultada">Categoria Empresa Consultada</string>
    <!-- Resources para Zona -->
    <string name="zona_idzona">ID Zona</string>
    <string name="zona_nombre">Nombre Zona</string>
    <string name="zona_departamento">Departamento</string>
    <string name="zona_municipio">Municipio</string>
    <string name= "zona_consultada">Zona Consultada</string>
    <string name="zona_noencontrada">Zona no encontrada</string>
    <!-- Resources para Detalle Reclamo -->
    <string name="detalle_id">ID Detalle Reclamo</string>
    <string name="detalle_Descripcion">Descripcion</string>

    <!-- Resources para Estado Reclamo -->
    <string name="estadoReclamo_id">Id del Estado</string>
    <string name="estadoReclamo_nombre">Nombre</string>
    <string name="estadoReclamo_Descripcion">Descripcion</string>
    <string name="estadoReclamo_consultado">Estado Reclamo Consultado</string>
    <string name="estadoReclamo_noencontrado">Estado Reclamo no encontrado</string>


    <!-- para Consulta Categoria Producto Servicio -->

    <string name="ConsultaCatProdServ">Categoria de prod serv Consultada</string>
    <string name="noenc_ConsultaCatProdServ">Consulta no encontrada</string>


    <!-- para Consulta  Producto Servicio -->
    <string name="ConsultaProdServ">Producto Servicio Consultado</string>

<!-- opciones de botones-->
    <string name="insertar_boton">Insertar</string>
    <string name="limpiar_boton">Limpiar</string>
    <string name="eliminar_boton">Eliminar</string>
    <string name="consultar_boton">Consultar</string>
    <string name="actualizar_boton">Actualizar</string>
    <string name="title_activity_zona_insertar">Insertar Zona</string>
    <string name="title_activity_zona_eliminar">Eliminar Zona</string>
    <string name="title_activity_zona_consultar">Consultar Zona</string>
    <string name="title_activity_zona_actualizar">Actualizar Zona</string>
    <string name="title_activity_reclamo_insertar">Insertar Reclamo</string>

    <string name="Titulo">Titulo</string>
    <string name="formatofec">DD/MM/AAAA</string>
    <string name="title_activity_reclamo_actualizar">Actualizar Reclamo</string>
    <string name="motivo">Motivo</string>
    <string name="Fecha">Fecha</string>
    <string name="title_activity_reclamo_consular">Consultar Reclamo</string>
    <string name="title_activity_reclamo_eliminar">Eliminar Reclamo</string>
    <string name="title_activity_empresa_insertar">Insertar Empresa</string>
    <string name="idempre">ID_Empresa</string>
    <string name="nomEmp">Nombre</string>
    <string name="title_activity_empresa_actualizar">Actualizar Empresa</string>
    <string name="title_activity_empresa_consultar">Consultar Empresa</string>
    <string name="title_activity_empresa_eliminar">Eliminar Empresa</string>
    <string name="title_activity_categoria_prod_serv_insertar">Insertar Categoria Producto/Servicio</string>
    <string name="idCategoriaPS">ID_Categoria_Prod_Serv</string>
    <string name="nombreCatPS">Nombre</string>
    <string name="descripcionCatPS">Descripcion</string>
    <string name="title_activity_categoria_prod_serv_actualizar">Actualizar Categoria Producto/Servicio</string>
    <string name="title_activity_categoria_prod_serv_consultar">Consultar Categoria Producto/Servicio</string>
    <string name="title_activity_categoria_prod_serv_eliminar">Eliminar Catetoria Producto/Servicio</string>
    <string name="title_activity_prod_serv_insertar">Insertar Producto/Servicio</string>
    <string name="idProdServ">ID Producto Servicio</string>
    <string name="title_activity_prod_serv_actualizar">Actualizar Producto/Servicio</string>
    <string name="title_activity_prod_serv_consultar">Consultar Producto/Servicio</string>
    <string name="title_activity_prod_serv_eliminar">Eliminar Producto/Servicio</string>

    <string name="error_insertar">Error al Insertar el registro, Registro Duplicado. Verificar inserción</string>
    <string name="cantidad_insertados">Registro Insertado No= </string>
    <string name="filas_afectadas">Filas Afectadas = </string>
    <string name="adjuntarfoto">adjuntar foto</string>
    <string name="idempresa">ID Empresa</string>
    <string name="cantcatempresa">Cantidad Empresas</string>
    <string name="title_activity_categoria_empresa_consulatar">Consultar Categoria Empresa</string>
    <string name="idReclamo">ID Reclamo</string>
    <string name="title_activity_categoria_empresa_insertar_actvity">CategoriaEmpresaInsertarActvity</string>
    <string name="title_activity_categoria_empresa_actulizar">CategoriaEmpresaActulizarActivity</string>
    <string name="busqueda_voz">Busqueda por voz</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="consultar_mapa">Ubicacion Mapa</string>
    <string name="title_activity_web_service__reclamo_">WebService_Reclamo_Activity</string>
    <string name="llenar_ws">Llenar Reclamos  en Base de datos local via Hosting Gratuito</string>
    <string name="llenar">Llenar</string>
    <string name="llenar_local">Llenar Reclamos en Base de Datos Local via  Servidor Local</string>
    <string name="obtener_reclamos_ws_fecha">Obtener Reclamos a partir de Fecha</string>
    <string name="hosting_gratuito">Hosting Gratuito</string>
    <string name="servidor_local">Servidor Local</string>
    <string name="formatofecha">aaaa-mm-dd</string>
    <string name="frmfecha">aaaa-mm-dd</string>
    <string name="title_activity_mostrar_por_fecha_reclamos">MostrarPorFechaReclamosActivity
    </string>
    <string name="enviar_bluetooth">Enviar Registros por Bluetooth</string>
</resources>
