<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="10dip"
android:stretchColumns="1"
    tools:context=".detallereclamo.DetalleReclamoActualizarActivity">
<TableRow>
    <TextView android:text="@string/detalle_id" />
    <EditText
        android:id="@+id/editDetalle_id"
        android:inputType="text"
        android:maxLength="7" />
</TableRow>

    <TableRow>
        <TextView android:text="@string/idProdServ" />
        <EditText
            android:id="@+id/idProdServ"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
<TableRow>
<TextView android:text="@string/detalle_Descripcion" />

<EditText
    android:id="@+id/editDescripcionDetalle"
    android:inputType="text"
    android:maxLength="30" />
</TableRow>
<TableRow>

</TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar_boton"
            android:id="@+id/button38"
            android:layout_column="0"
            android:onClick="consultarDetalle" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar_boton"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="actualizarDetalle"
            android:text="@string/actualizar"
            android:layout_column="0"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0">

        </TableRow>
    </TableRow>
</TableLayout>