<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.irvandoval.reclamosgrupo17.sucursal.SucursalConsultarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_idsucursal"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_idempresa"
        android:id="@+id/textView19"
        android:layout_below="@+id/button10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_idzona"
        android:id="@+id/textView20"
        android:layout_below="@+id/editIdEmpresa"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_nombresucursal"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_jefesucursal"
        android:id="@+id/textView22"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_direccionsucursal"
        android:id="@+id/textView23"
        android:lines="4"
        android:layout_above="@+id/editTelefonoSucursal"
        android:layout_toLeftOf="@+id/editNombreSucursal"
        android:layout_toStartOf="@+id/editNombreSucursal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_telefonosucursal"
        android:id="@+id/textView24"
        android:layout_above="@+id/botonMapa"
        android:layout_alignLeft="@+id/textView23"
        android:layout_alignStart="@+id/textView23" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editIdSucursal"
        android:layout_alignTop="@+id/textView18"
        android:layout_alignRight="@+id/editIdZona"
        android:layout_alignEnd="@+id/editIdZona" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editIdEmpresa"
        android:layout_below="@+id/imageButton7"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editIdZona"
        android:layout_above="@+id/editNombreSucursal"
        android:layout_alignLeft="@+id/editIdEmpresa"
        android:layout_alignStart="@+id/editIdEmpresa" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editNombreSucursal"
        android:layout_toRightOf="@+id/textView21"
        android:layout_above="@+id/textView22"
        android:layout_alignRight="@+id/editIdZona"
        android:layout_alignEnd="@+id/editIdZona" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editJefeSucursal"
        android:layout_alignBottom="@+id/textView22"
        android:layout_toRightOf="@+id/textView21"
        android:layout_alignRight="@+id/editNombreSucursal"
        android:layout_alignEnd="@+id/editNombreSucursal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDireccionSucursal"
        android:layout_alignTop="@+id/textView23"
        android:layout_toRightOf="@+id/textView24"
        android:layout_alignRight="@+id/editTelefonoSucursal"
        android:layout_alignEnd="@+id/editTelefonoSucursal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTelefonoSucursal"
        android:layout_alignBottom="@+id/textView24"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23"
        android:hint="@string/usuario_telefono_patron" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_boton"
        android:id="@+id/button10"
        android:onClick="consultarSucursal"
        android:layout_above="@+id/editIdEmpresa"
        android:layout_toLeftOf="@+id/botonMapa"
        android:layout_toStartOf="@+id/botonMapa" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar_boton"
        android:id="@+id/button11"
        android:onClick="limpiarTexto"
        android:layout_alignBottom="@+id/imageButton7"
        android:layout_alignRight="@+id/editIdEmpresa"
        android:layout_alignEnd="@+id/editIdEmpresa"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_mapa"
        android:id="@+id/botonMapa"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="consultarMapa" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton7"
        android:src="@mipmap/button_icon"
        android:onClick="busquedaPorVoz"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/botonMapa"
        android:layout_toEndOf="@+id/botonMapa" />
</RelativeLayout>
