<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.irvandoval.reclamosgrupo17.categoriaempresa.CategoriaEmpresaActulizarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/idcatempresa"
        android:id="@+id/textView50"
        android:layout_below="@+id/cantEmpresas"
        android:layout_alignLeft="@+id/button17"
        android:layout_alignStart="@+id/button17"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/IDCE"
        android:layout_alignTop="@+id/textView50"
        android:layout_alignRight="@+id/DescripcionCE"
        android:layout_alignEnd="@+id/DescripcionCE"
        android:inputType="number" />
    <TextView android:text="@string/nombrecatempresa" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView31"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:id="@+id/NombreCE"
        android:layout_below="@+id/textView31"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/descripcion_cempresa"
        android:id="@+id/textView33"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/NombreCE"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cantcatempresa"
        android:id="@+id/textView51"
        android:layout_alignBaseline="@+id/cantEmpresas"
        android:layout_alignBottom="@+id/cantEmpresas"
        android:layout_alignLeft="@+id/textView50"
        android:layout_alignStart="@+id/textView50" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/cantEmpresas"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/DescripcionCE"
        android:layout_alignEnd="@+id/DescripcionCE" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/DescripcionCE"
        android:layout_below="@+id/textView33"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_boton"
        android:id="@+id/button17"
        android:onClick="actualizarCE"
        android:nestedScrollingEnabled="false"
        android:layout_alignBottom="@+id/butt"
        android:layout_toLeftOf="@+id/cantEmpresas"
        android:layout_toStartOf="@+id/cantEmpresas" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_boton"
        android:id="@+id/butt"
        android:onClick="consultarCatEmpresa"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/IDCE"
        android:layout_toLeftOf="@+id/button17"
        android:layout_toStartOf="@+id/button17" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar_boton"
        android:id="@+id/button18"
        android:onClick="limpiarCE"
        android:layout_alignTop="@+id/button17"
        android:layout_toRightOf="@+id/textView51"
        android:layout_toEndOf="@+id/textView51" />

</RelativeLayout>
