<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.irvandoval.reclamosgrupo17.reclamo.ReclamoEliminarActivity">

    <TextView android:text="@string/Titulo" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="26dp"
        android:id="@+id/textView15" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/reclamoTitulo"
        android:layout_alignTop="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:layout_toEndOf="@+id/textView15"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/motivo"
        android:id="@+id/textView16"
        android:layout_below="@+id/reclamoTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/reclamoMotivo"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignLeft="@+id/reclamoTitulo"
        android:layout_alignStart="@+id/reclamoTitulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Fecha"
        android:id="@+id/textView17"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/reclamoMotivo"
        android:layout_alignRight="@+id/textView16"
        android:layout_alignEnd="@+id/textView16" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/fechaReclamo"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignLeft="@+id/reclamoMotivo"
        android:layout_alignStart="@+id/reclamoMotivo"
        android:hint="@string/formatofec" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_boton"
        android:id="@+id/button8"
        android:layout_below="@+id/textView17"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar_boton"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button8"
        android:layout_alignRight="@+id/reclamoTitulo"
        android:layout_alignEnd="@+id/reclamoTitulo"
        android:onClick="limpiarTexto1" />

</RelativeLayout>
